# serializer version: 1
# name: TestLazyJoins.test_lazy_join_on_lazy_table
  '''
  
  SELECT cohort_people__new_person.id AS id 
  FROM (
  SELECT DISTINCT cohortpeople.person_id AS cohort_people___person_id, cohortpeople.person_id AS person_id, cohortpeople.cohort_id AS cohort_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 420), 0)) AS cohort_people LEFT JOIN (
  SELECT persons.id AS id, id AS cohort_people__new_person___id 
  FROM (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons) AS cohort_people__new_person ON equals(cohort_people.cohort_people___person_id, cohort_people__new_person.cohort_people__new_person___id) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_lazy_join_on_lazy_table_with_person_properties
  '''
  
  SELECT persons__events.event AS event 
  FROM (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS persons___properties___email, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons LEFT JOIN (
  SELECT events.event AS event, event AS persons__events___event 
  FROM events 
  WHERE equals(events.team_id, 420)) AS persons__events ON equals(persons.persons___properties___email, persons__events.persons__events___event) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_lazy_join_on_lazy_table_with_properties
  '''
  
  SELECT cohort_people__new_person.id AS id 
  FROM (
  SELECT DISTINCT cohortpeople.person_id AS cohort_people___person_id, cohortpeople.person_id AS person_id, cohortpeople.cohort_id AS cohort_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 420), 0)) AS cohort_people LEFT JOIN (
  SELECT persons.id AS id, persons.properties___email AS cohort_people__new_person___properties___email 
  FROM (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___email, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons) AS cohort_people__new_person ON equals(cohort_people.cohort_people___person_id, cohort_people__new_person.cohort_people__new_person___properties___email) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_table_as_select_table
  '''
  
  SELECT persons.id AS id, persons.properties___email AS email, persons.`properties___$browser` AS `$browser` 
  FROM (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___email, argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), person.version) AS `properties___$browser`, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_2)s), person.version), plus(now64(6, %(hogql_val_3)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_table_as_table_in_join
  '''
  
  SELECT events.event AS event, events.distinct_id AS distinct_id, if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS person_id, persons.properties___email AS email 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___email, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons ON equals(persons.id, if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id)) 
  WHERE equals(events.team_id, 420) 
  LIMIT 10
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_table_indirect_duplicate_references
  '''
  
  SELECT if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS person_id, events__person.properties AS properties 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT argMax(person.properties, person.version) AS properties, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_table_indirectly_referenced
  '''
  
  SELECT events__person.id AS id 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables
  '''
  
  SELECT events.event AS event, events__pdi.person_id AS person_id 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 420) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_one_level_properties
  '''
  
  SELECT person_distinct_ids__person.`properties___$browser` AS `$browser` 
  FROM (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_distinct_ids___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 420) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids LEFT JOIN (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS `properties___$browser`, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids__person ON equals(person_distinct_ids.person_distinct_ids___person_id, person_distinct_ids__person.id) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_one_level_properties_deep
  '''
  
  SELECT person_distinct_ids__person.`properties___$browser___in___json` AS `$browser__in__json` 
  FROM (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_distinct_ids___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 420) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids LEFT JOIN (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s, %(hogql_val_1)s, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), person.version) AS `properties___$browser___in___json`, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_3)s), person.version), plus(now64(6, %(hogql_val_4)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids__person ON equals(person_distinct_ids.person_distinct_ids___person_id, person_distinct_ids__person.id) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_traversed_fields
  '''
  
  SELECT events.event AS event, if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id) AS person_id 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_two_levels
  '''
  
  SELECT events.event AS event, events__pdi__person.id AS id 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS events__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 420) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi__person ON equals(events__pdi.events__pdi___person_id, events__pdi__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_two_levels_properties
  '''
  
  SELECT events.event AS event, events__pdi__person.`properties___$browser` AS `$browser` 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS events__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 420) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) LEFT JOIN (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS `properties___$browser`, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi__person ON equals(events__pdi.events__pdi___person_id, events__pdi__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_two_levels_properties_duplicate
  '''
  
  SELECT events.event AS event, events__person.properties AS properties, events__person.properties___name AS name 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___name, argMax(person.properties, person.version) AS properties, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_resolve_lazy_tables_two_levels_traversed
  '''
  
  SELECT events.event AS event, events__person.id AS id 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 420) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestLazyJoins.test_select_count_from_lazy_table
  '''
  
  SELECT count() AS `count()` 
  FROM (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 420) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS persons 
  LIMIT 50000
  '''
# ---
